# waggle

./: .gitignore  COMMANDS.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  justfile
bench/: Cargo.toml  README.md
bench/manifests/: receipt-seal-example.json  swe-lite-example.json
bench/src/: cost_model.rs  determinism.rs  driver.rs  emit.rs  main.rs  rng.rs  tier2.rs  tokenizer.rs
bench/tier3/: NEXT.md  analyze.py  analyze2.py  analyze3.py  analyze4.py  analyze_paired.py  analyze_sample.py  bench.py  bench2.py  bench3.py  bench4.py  conformance.py  corpus.py  corpus_real.py  corpus_tree.py  rote_models.py
bench/tier3/results/: corpus2_manifest.json  corpus_manifest.json  runs_extract_full.json  runs_final.json  runs_opaque_extract.json  runs_v2.json  runs_v3.json  runs_v4.json
crates/waggle/: Cargo.toml
crates/waggle-agent/: Cargo.toml
crates/waggle-agent/src/: lib.rs
crates/waggle-cli/: Cargo.toml
crates/waggle-cli/src/: daemon.rs  edge.rs  health.rs  identity.rs  init.rs  main.rs  remote.rs  run.rs
crates/waggle-cli/tests/: daemon_mgmt.rs  daemon_purge.rs  federation.rs  stdio_transport.rs  two_clients.rs
crates/waggle-core/: Cargo.toml
crates/waggle-core/benches/: hot_paths.rs
crates/waggle-core/src/: context.rs  contract.rs  entropy.rs  event.rs  fold.rs  lib.rs  log.rs  manifest.rs  matcher.rs  mint.rs  reconstruct.rs  resolve.rs  slug.rs  soa.rs  target.rs  time.rs  token.rs  trust.rs
crates/waggle-core/tests/: event_sourcing.rs  properties.rs  selection_vectors.rs  spec_vectors.rs
crates/waggle-lens-code/: Cargo.toml
crates/waggle-lens-code/benches/: extract.rs
crates/waggle-lens-code/src/: extract.rs  lib.rs  outline.rs
crates/waggle-mcp/: Cargo.toml
crates/waggle-mcp/benches/: query_paths.rs
crates/waggle-mcp/src/: content.rs  content_handlers.rs  contract_args.rs  discovery.rs  envelope.rs  extract.rs  handlers.rs  lib.rs  lineage.rs  map.rs  outline_wire.rs  query.rs  record.rs  resources.rs  rpc.rs  tree.rs  tree_mint.rs  tree_read.rs
crates/waggle-mcp/tests/: content_access.rs  contract_receipts.rs  envelope_contract.rs  gap_fixes.rs  guided_query.rs  media_e2e.rs  resource_projection.rs  scenario_a.rs  symbol_lens.rs
crates/waggle-ops/: Cargo.toml
crates/waggle-ops/src/: lib.rs
crates/waggle-social/: Cargo.toml
crates/waggle-social/src/: channels.rs  lib.rs  og.rs  package.rs  qr.rs
crates/waggle-store/: Cargo.toml
crates/waggle-store-cloudflare/: Cargo.toml
crates/waggle-store-cloudflare/src/: engine.rs  lib.rs  storage.rs
crates/waggle-store-cloudflare/tests/: e_matrix_native.rs
crates/waggle-store-fs-jsonl/: Cargo.toml
crates/waggle-store-fs-jsonl/src/: lib.rs
crates/waggle-store-fs-jsonl/tests/: conformance.rs
crates/waggle-store-sqlite/: Cargo.toml  build.rs
crates/waggle-store-sqlite/benches/: store_paths.rs
crates/waggle-store-sqlite/src/: blobs.rs  cache.rs  lib.rs  schema.rs  store.rs
crates/waggle-store-sqlite/tests/: conformance.rs  crash_matrix.rs  g_suite.rs  loom_cache.rs
crates/waggle-store/src/: conformance.rs  error.rs  lib.rs  memory.rs  traits.rs  types.rs
crates/waggle-tmux/: Cargo.toml
crates/waggle-tmux/src/: actions.rs  board.rs  error.rs  main.rs  profile.rs  state.rs  tmux.rs  up.rs  waggle.rs  watch.rs
crates/waggle-tmux/tests/: switchboard.rs
crates/waggle-tree/: Cargo.toml
crates/waggle-tree/src/: bloom.rs  dirindex.rs  lib.rs  search.rs  trigram.rs
crates/waggle/src/: lib.rs
edge-worker/: .gitignore  Cargo.toml  wrangler.toml
edge-worker/.wrangler/cache/: cf.json  wrangler-account.json
edge-worker/.wrangler/tmp/bundle-04Iftc/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-2oi8TO/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-41EjTX/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-5ZHqnd/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-7bZedd/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-7tYlgl/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-ACdvgV/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-B4YrQk/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-DtooiT/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-LRzQOi/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-MpPwaC/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-RARrUp/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-YdDP2G/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-eBDjka/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-gntM1K/: middleware-loader.entry.ts
edge-worker/.wrangler/tmp/bundle-oySAea/: middleware-insertion-facade.js  middleware-loader.entry.ts
edge-worker/.wrangler/tmp/dev-0ql0JE/: shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-8xuupb/: 39687a18a0b871bf63a65b2fe3e74e21cf88d04d-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-AGGp6m/: 339e04cf18f9a2e7213d61cf6db3a0116b95a8f0-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-BzsLRQ/: 29389b2eac672d7946a368bc06bd14e180e4404c-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-NnwU8J/: 20a95cdd67472f4de82252c04146c675dfce659a-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-UVYO70/: shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-VLN7io/: a3263100c057423814ea82e8970f563c74d6f91f-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-YxY1GZ/: shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-bjOsi1/: shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-i7wP1Y/: shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-i8gEU3/: 477798fdc3131dc16b0243956cd45b32f7029d8d-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-oWO0mX/: 34fe31f20f39a35ca23b91836b53b9d3835f8512-index_bg.wasm  shim.js  shim.js.map
edge-worker/.wrangler/tmp/dev-uk8zlE/: shim.js  (+1 more)
edge-worker/src/: blobs.rs  hive.rs  lib.rs  routes.rs
edge-worker/tests/: miniflare.rs
xtask/: Cargo.toml
xtask/src/: main.rs  vectors.rs
(+70 files in other folders)
