[workspace]
resolver = "2"
members = ["crates/*", "edge-worker", "xtask", "bench"]

[workspace.package]
version = "0.5.3"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modiqo/waggle"
homepage = "https://github.com/modiqo/waggle"
authors = ["Modiqo <oss@modiqo.ai>"]
keywords = ["agents", "mcp", "attribution", "handoff", "coordination"]
categories = ["development-tools"]
# Every published crate shows the repository README on crates.io. Inherited
# `readme` paths resolve from the workspace root, so this one file serves
# the whole family (crates opt in with `readme.workspace = true`).
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
getrandom = "0.2"
clap = { version = "4", features = ["derive"] }
pollster = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
qrcodegen = "1.8"
criterion = { version = "0.5", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case"] }
loom = "0.7"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }

waggle-core = { path = "crates/waggle-core", version = "0.5.3" }
waggle-tree = { path = "crates/waggle-tree", version = "0.5.3" }
waggle-ops = { path = "crates/waggle-ops", version = "0.5.3" }
waggle-agent = { path = "crates/waggle-agent", version = "0.5.3" }
waggle-social = { path = "crates/waggle-social", version = "0.5.3" }
waggle-store = { path = "crates/waggle-store", version = "0.5.3" }
waggle-store-sqlite = { path = "crates/waggle-store-sqlite", version = "0.5.3" }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
