[package]
name = "waggle-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Reproducible benchmark harness for the waggle paper (design doc 22)."

[[bin]]
name = "waggle-bench"
path = "src/main.rs"

[dependencies]
waggle-core = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
