[package]
name = "xtask"
description = "Workspace automation for waggle: the file-size lint (13 §1) and doc generation from the operations catalog."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
waggle-ops = { workspace = true }
waggle-core = { workspace = true }
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
