[package]
name = "waggle-agent"
description = "Resolver-context extraction for waggle: harness metadata, A2A Agent Cards, and explicit context, behind one extractor seam. Lands in CP-2/CP-6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
waggle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
