[package]
name = "waggle-cli"
description = "The waggle CLI: the clap projection of the operations catalog. Ships `waggle` (verbs) and, from CP-6, `waggled` (the local daemon) and the stdio shim."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[[bin]]
name = "waggle"
path = "src/main.rs"

[dependencies]
waggle-core = { workspace = true }
waggle-ops = { workspace = true }
waggle-mcp = { path = "../waggle-mcp", version = "0.5.2", features = ["code-lens", "doc-extract"] }
waggle-store = { path = "../waggle-store", version = "0.5.2" }
waggle-store-sqlite = { path = "../waggle-store-sqlite", version = "0.5.2" }
clap = { workspace = true }
serde_json = { workspace = true }
pollster = { workspace = true }
getrandom = { workspace = true }
base64 = "0.22"
ed25519-dalek = { workspace = true }
ureq = "2"

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true }

[lints]
workspace = true
