[package]
name = "waggle-mcp"
description = "The MCP projection of the waggle operations catalog: generated tool schemas, response envelope, stdio + streamable-HTTP server plumbing. Lands in CP-6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
waggle-core = { workspace = true }
waggle-ops = { workspace = true }
waggle-store = { path = "../waggle-store", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { workspace = true }
regex = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
waggle-store-sqlite = { path = "../waggle-store-sqlite", version = "0.1.0" }
criterion = { workspace = true }

[[bench]]
name = "query_paths"
harness = false

[lints]
workspace = true
