[package]
name = "waggle-mcp"
description = "The MCP projection of the waggle operations catalog: generated tool schemas, response envelope, stdio + streamable-HTTP server plumbing. Lands in CP-6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
waggle-core = { workspace = true }
waggle-ops = { workspace = true }
waggle-store = { path = "../waggle-store", version = "0.4.0" }
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { workspace = true }
regex = { workspace = true }
ed25519-dalek = { workspace = true }
# The symbol lens's EXTRACTION half (doc 20): tree-sitter is C, so it is
# feature-gated off by default — the edge worker compiles this crate to
# wasm and serves precomputed outlines as data (outline_wire.rs, always
# compiled). The CLI/daemon turn the feature on.
waggle-lens-code = { path = "../waggle-lens-code", version = "0.4.0", optional = true }
# Deterministic PDF text-layer extraction (doc 18 §7). Pure Rust, no C — but a
# heavy parser, so feature-gated off by default and off for the wasm/edge build.
# The CLI/daemon turn it on; HTML extraction needs no crate and is always present.
pdf-extract = { version = "0.12", optional = true }

[features]
default = []
code-lens = ["dep:waggle-lens-code"]
doc-extract = ["dep:pdf-extract"]

[dev-dependencies]
pollster = { workspace = true }
waggle-store-sqlite = { path = "../waggle-store-sqlite", version = "0.4.0" }
waggle-social = { workspace = true }
waggle-lens-code = { path = "../waggle-lens-code", version = "0.4.0" }
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "query_paths"
harness = false

[lints]
workspace = true
