[package]
name = "waggle-social"
description = "Human-facing renderers for waggle tokens: SharePackage per channel, OG meta from snapshot metadata, QR. Pure functions; lands in CP-8."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
waggle-core = { workspace = true }
serde = { workspace = true }
qrcodegen = { workspace = true, optional = true }

[features]
default = ["qr"]
## SVG QR rendering for the qr-event channel (design doc 05).
qr = ["dep:qrcodegen"]

[lints]
workspace = true
