[package]
name = "waggle-store-cloudflare"
description = "Cloudflare edge backend for waggle: KV, Queues, R2, Analytics Engine. Lands in CP-10 (0.2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]


[lints]
workspace = true
