[package]
name = "waggle-store-cloudflare"
description = "Cloudflare edge backend for waggle: KV, Queues, R2, Analytics Engine. Lands in CP-10 (0.2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
waggle-core = { workspace = true }
waggle-store = { path = "../waggle-store", version = "0.3.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
waggle-store-sqlite = { path = "../waggle-store-sqlite", version = "0.3.0" }

[lints]
workspace = true
