[package]
name = "waggle-store-fs-jsonl"
description = "Minimalist JSONL backend for waggle and the export/replay wire format. Lands in CP-5."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
waggle-core = { workspace = true }
waggle-store = { path = "../waggle-store", version = "0.5.2" }
serde_json = { workspace = true }
thiserror = { workspace = true }
pollster = { workspace = true }

[lints]
workspace = true
